--- a/UserInterfaceApp/Views/AddContactPage.xaml
+++ b/UserInterfaceApp/Views/AddContactPage.xaml
@@ -5,7 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:UserInterfaceApp"
              mc:Ignorable="d"
-             x:Class="UserInterfaceApp.Views.AddContactPage">
+             x:Class="UserInterfaceApp.Views.AddContactPage"
+             Title="Add Contact">
     
     <ContentPage.BindingContext>
         <local:AddContactViewModel/>
