--- a/UserInterfaceApp/Views/ContactListPage.xaml
+++ b/UserInterfaceApp/Views/ContactListPage.xaml
@@ -5,7 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:UserInterfaceApp"
              mc:Ignorable="d"
-             x:Class="UserInterfaceApp.Views.ContactListPage">
+             x:Class="UserInterfaceApp.Views.ContactListPage"
+             Title="List Contact">
     
     <ContentPage.BindingContext>
         <local:ContactListViewModel/>
